# open-tradingagents

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
article/: open-tradingagents.html
src/open_tradingagents/: __init__.py  config.py  graph.py  main.py  memory.py  prompts.py  skills.py  state.py
src/open_tradingagents/agents/: __init__.py  analysts.py  portfolio_manager.py  researchers.py  risk.py  trader.py
src/open_tradingagents/skills/: bull_bear_debate.md  trade_report.md
src/open_tradingagents/tools/: __init__.py  fundamentals_server.py  news_server.py  prices_server.py  technicals_server.py
